--- a/pom.xml
+++ b/pom.xml
@@ -45,4 +45,12 @@
             <artifactId>spring-data-commons</artifactId>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/forguta/commons</url>
+        </repository>
+    </distributionManagement>
 </project>
