--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -34,8 +34,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ RELEASE_VERSION }}
-        release_name: Release ${{ RELEASE_VERSION }}
+        tag_name: ${{ env.RELEASE_VERSION }}
+        release_name: Release ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
 
