--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.forguta</groupId>
+    <groupId>com.github.forguta</groupId>
     <artifactId>commons</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <packaging>jar</packaging>
 
     <name>commons</name>
